// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadLink matches the snapshot 1`] = `
<a
  class="sc-gZMcBi yDTyN"
  download="filename.csv"
  tabindex="0"
>
  CSV
</a>
`;

exports[`DownloadLink matches the snapshot 2`] = `
<a
  class="sc-gZMcBi yDTyN"
  disabled=""
  download="filename.csv"
  tabindex="-1"
>
  CSV
</a>
`;
